--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,15 @@
 @import "tailwindcss";
 
 body {
-  @apply m-0 p-0 box-border;
+  @apply m-0 p-0 box-border text-[#ec9706];
+}
+
+.font-playfair {
+  font-family: "Lora", sans-serif;
+}
+
+.starring {
+  @apply font-semibold;
 }
 
 .container {
